# ledger-parser-combinators

./: Cargo.toml  debug.sh  shell.nix
.cargo/: config
.github/workflows/: rust.yml
dep/alamgu/: github.json
dep/ledger-platform/: github.json
example/: Cargo.toml  build.rs
example/proto/: sample.proto
example/src/: main.rs
parser-combinators/: Cargo.toml
parser-combinators/src/: async_parser.rs  json.rs  json_interp.rs  lib.rs  schema.rs
parser-combinators/src/protobufs/: async_parser.rs  interp.rs  mod.rs
proto-gen/: Cargo.toml  build.rs
proto-gen/src/: lib.rs  main.rs  parse.rs
proto-gen/src/generate/: descriptor.rs  file_descriptor.rs  mod.rs
src/: async_parser.rs  block_adapter.rs  core_parsers.rs  endianness.rs  forward_parser.rs  interp.rs  interp_parser.rs  json.rs  json_interp.rs  lib.rs  schema.rs
src/bcs/: async_parser.rs  mod.rs
src/protobufs/: async_parser.rs  interp.rs  mod.rs  schema.rs
