[package]
name = "ledger-parser-combinators"
version = "0.1.2"
authors = ["Jonathan D.K. Gibbons <jonored@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 0
[profile.dev]
opt-level = 0

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
generic-array = { version = "0.14.4", default-features = false }
paste = "1.0"
bstringify = "0.1.2"
enum-init = { git = "https://github.com/alamgu/enum-init" }
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
trie-enum = { git = "https://github.com/alamgu/trie-enum" }
pin-project = "1.0.12"

[dependencies.ledger-log]
git = "https://github.com/alamgu/ledger-log"
optional = true

[features]
"logging" = [ "ledger-log" ]

[target.'cfg(target_family = "bolos")'.dependencies]
ledger_device_sdk = "1.5.1"
ledger_secure_sdk_sys = "1.1.0"

[target.'cfg(target_family = "bolos")'.dev-dependencies]
testmacro = "0.1.0"
ledger_device_sdk = { version = "1.5.1", features = ["speculos"] }