[package]
name = "ledger-parser-combinators"
version = "0.1.0"
authors = ["Jonathan D.K. Gibbons <jonored@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 0
[profile.dev]
opt-level = 0

[dependencies]

arrayvec = { version = "0.7.1", default-features = false }
generic-array = { version = "0.14.4", default-features = false }
log = "0.4.14"
paste = "1.0"
bstringify = "0.1.2"
enum-init = { git = "https://github.com/obsidiansystems/enum-init" }
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
trie-enum = { git = "https://github.com/ea-nasir/trie-enum" }

[dependencies.ledger-log]
git = "https://github.com/ea-nasir/ledger-log"
features = ["log_trace"]
optional = true

[features]
"logging" = [ "ledger-log" ]

[target.thumbv6m-none-eabi.dependencies.nanos_sdk]
git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git"
features = [ "speculos" ]

[target.thumbv6m-none-eabi.dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro"}

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/ObsidianSystems/ledger-nanos-sdk.git"
branch = "use-ambient-compiler-and-target"
