[package]
name = "proto-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.27"
tempfile = "3.3"

[build-dependencies]
protoc-rust= "2.27"

[dev-dependencies]
pretty_assertions = "1.2"
